Added base entities
